# metal-mind

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: metal-mind-tokenizer.model  metal-mind-tokenizer.vocab  tokenizer_ablation_results.csv
core/: evaluate.py  logging.py
development/: train-tokenizer.py
