[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metal-mind"
version = "0.1.0"
description = "Core ML utilities for metal mind"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

authors = [
    { name = "Tanul Kumar Srivastava" }
]

dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "tensorflow==2.15.1",
    "openpyxl==3.1.2",
    "python-dotenv==1.0.1",
    "tqdm==4.67.3",
    "faiss-cpu==1.8.0",
    "langchain>=0.2.14,<0.3.0",
    "langchain-community>=0.2.14,<0.3.0",
    "nbformat==5.10.4",
    "kaleido==0.2.1",
    "pylint==3.2.0",
    "sentencepiece==0.2.1",
    "tensorflow-text==2.15.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]